--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 
     <body>
 
-        <h1> welcome to my page</h1>
+        <h1> welcome to my page ! Hello guys</h1>
 
     </body>
     <script src="script.js"></script>
-    
+
 </html>
